<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FAQ">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/gradient_bg"
        android:id="@+id/faqConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageFaq"
            android:layout_width="123dp"
            android:layout_height="70dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="115dp"
            android:contentDescription="@string/todoo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_question_mark_24"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="173dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="174dp"
            style="@style/TextAppearance.Kamatechs.Title"
            android:text="@string/faq"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageFaq" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="180dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/_1_what_is_kamatechs"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="71dp"
            android:fontFamily="@font/raleway_bold"
            android:textColor="@color/colorAccent"
            android:text="@string/_2_what_is_the_goal_of_kamatechs"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="354dp"
            android:layout_height="62dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="37dp"
            android:textColor="@color/colorAccent"
            android:text="@string/_3_what_is_the_reason_in_creating_kamatechs"
            android:textSize="20sp"
            android:fontFamily="@font/raleway_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="379dp"
            android:layout_height="84dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/raleway"
            android:text="@string/the_kamatechs_help_farmers_predict_the_environment_and_preserve_the_quality_of_post_harvest_tomato_using_a_deep_learning_based_prediction_system_for_storage_cooling_devices"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="379dp"
            android:layout_height="84dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/raleway"
            android:textColor="@color/colorAccent"
            android:text="@string/climate_change_affects_the_storage_conditions_of_post_harvest_tomatoes_to_minimize_its_effect_a_deep_learning_based_prediction_system_for_storage_cooling_devices_was_created"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="376dp"
            android:layout_height="73dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="19dp"
            android:fontFamily="@font/raleway"
            android:textColor="@color/colorAccent"
            android:text="@string/the_goal_of_kamatechs_is_to_help_tomato_farmers_preserve_the_quality_and_shelf_life_of_post_harvest_tomatoes"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>