<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".About">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/gradient_bg"
        android:id="@+id/aboutConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageAbout"
            android:layout_width="173dp"
            android:layout_height="70dp"
            android:layout_marginStart="96dp"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="96dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_info_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="118dp"
            android:layout_height="38dp"
            android:layout_marginStart="146dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="147dp"
            style="@style/TextAppearance.Kamatechs.Title"
            android:text="@string/about"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageAbout" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="366dp"
            android:layout_height="180dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="13dp"
            android:fontFamily="@font/raleway"
            android:text="@string/the_kamatechs_help_farmers_predict_the_outside_environment_and_preserve_the_quality_of_post_harvest_tomatoes_using_a_deep_learning_based_prediction_system_for_storage_cooling_devices_through_the_following_technologies"
            android:textAlignment="viewStart"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="365dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/raleway"
            android:text="@string/_1_predictive_analysis_algorithm"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="365dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/raleway"
            android:text="@string/_2_embedded_system"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="365dp"
            android:layout_height="45dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="14dp"
            android:fontFamily="@font/raleway"
            android:text="@string/_3_adaptive_cooling_storage"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>